--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
           <div class="rectangle"></div>
           <img class="logo" src="img/logo-1.png" />
           <div class="text-wrapper">PAT PAT</div>
-          <div class="text-wrapper-2">Download</div>
+          <div class="text-wrapper-2"><a style="color: inherit;" href="#anchor">Download</a></div>
+          <!-- <div class="text-wrapper-2">Download</div> -->
         </div>
         <div class="overlap-group">
           <div class="text-wrapper-3">Discord</div>
@@ -24,15 +25,15 @@
         </div>
         <div class="image-wrapper"><img class="img" src="img/image-2.png" /></div>
         <div class="img-wrapper"><img class="image-2" src="img/image-1-1.png" /></div>
-        <img class="socials-2" src="img/network-x-style-mono.svg" />
-        <img class="socials-3" src="img/socials-1.svg" />
-        <a href="https://discord.gg/SYmyt6jrkt"><img class="socials-4" src="img/socials-3.svg" /></a>
+        <a href="https://twitter.com/fissure55248"><img class="socials-2" src="img/network-x-style-mono.svg" /></a>
+        <a href="https://www.youtube.com/channel/UCcfBEh-6bOlSNbrwklcjd0A"><img class="socials-3" src="img/socials-1.svg" /></a>
+        <a href="https://discord.com/channels/1218562530130133042/1219261479652687992"><img class="socials-4" src="img/socials-3.svg" /></a>
         <div class="overlap-group-2">
           <div class="text-wrapper-6">Contact US</div>
           <img class="line" src="img/line-5.svg" />
           <img class="line-2" src="img/line-6.svg" />
         </div>
-        <div class="text-wrapper-7">Download From</div>
+        <div class="text-wrapper-7" id="anchor"> Download From </div>
         <div class="overlap-2">
           <div class="text-wrapper-6">About Us</div>
           <img class="line" src="img/line-5.svg" />
