update head image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="macbook-air">
       <div class="div">
         <div class="overlap">
-          <img class="DALLE" src="img/dall-e-2023-11-02-21-07-02-photo-of-a-gaming-room-showing-a-ta.png" />
+          <img class="DALLE" src="img/head.jpg" />
           <div class="rectangle"></div>
           <img class="logo" src="img/logo-1.png" />
           <div class="text-wrapper">PAT PAT</div>
