--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="overlap">
           <img class="DALLE" src="img/head.jpg" />
           <div class="rectangle"></div>
-          <img class="logo" src="img/logo-1.png" />
+          <img class="logo" src="img/logo.png" />
           <div class="text-wrapper">PAT PAT</div>
           <div class="text-wrapper-2"><a style="color: inherit;" href="#anchor">Download</a></div>
           <!-- <div class="text-wrapper-2">Download</div> -->
@@ -23,8 +23,8 @@
           <img class="image" src="img/image-1.png" />
           <img class="socials" src="img/socials-2.svg" />
         </div>
-        <div class="image-wrapper"><img class="img" src="img/image-2.png" /></div>
-        <div class="img-wrapper"><img class="image-2" src="img/image-1-1.png" /></div>
+        <div class="image-wrapper"><img class="img" src="img/sidequest.png" /></div>
+        <div class="img-wrapper"><img class="image-2" src="img/meta.png" /></div>
         <a href="https://twitter.com/fissure55248"><img class="socials-2" src="img/network-x-style-mono.svg" /></a>
         <a href="https://www.youtube.com/channel/UCcfBEh-6bOlSNbrwklcjd0A"><img class="socials-3" src="img/socials-1.svg" /></a>
         <a href="https://discord.com/channels/1218562530130133042/1219261479652687992"><img class="socials-4" src="img/socials-3.svg" /></a>
@@ -54,7 +54,7 @@
           </p>
           <p class="text"><span class="text-wrapper-8"> Immerse yourself in the charm of musical rhythm!</span></p>
         </div>
-        <a href="https://d-fissure.com/"> <img class="image-3" src="img/image-3.png" /></a>
+        <a href="https://d-fissure.com/"> <img class="image-3" src="img/dfissure.png" /></a>
       </div>
     </div>
   </body>
