--- a/index.html
+++ b/index.html
@@ -1,61 +1,72 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="globals.css" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="macbook-air">
-      <div class="div">
-        <div class="overlap">
-          <img class="DALLE" src="img/head.jpg" />
-          <div class="rectangle"></div>
-          <img class="logo" src="img/logo.png" />
-          <div class="text-wrapper">PAT PAT</div>
-          <div class="text-wrapper-2"><a style="color: inherit;" href="#anchor">Download</a></div>
-          <!-- <div class="text-wrapper-2">Download</div> -->
-        </div>
-        <div class="overlap-group">
-          <div class="text-wrapper-3">Discord</div>
-          <div class="text-wrapper-4">X</div>
-          <div class="text-wrapper-5">Youtube</div>
-          <img class="image" src="img/image-1.png" />
-          <img class="socials" src="img/socials-2.svg" />
-        </div>
-        <div class="image-wrapper"><img class="img" src="img/sidequest.png" /></div>
-        <div class="img-wrapper"><img class="image-2" src="img/meta.png" /></div>
-        <a href="https://twitter.com/fissure55248"><img class="socials-2" src="img/network-x-style-mono.svg" /></a>
-        <a href="https://www.youtube.com/channel/UCcfBEh-6bOlSNbrwklcjd0A"><img class="socials-3" src="img/socials-1.svg" /></a>
-        <a href="https://discord.com/channels/1218562530130133042/1219261479652687992"><img class="socials-4" src="img/socials-3.svg" /></a>
-        <div class="overlap-group-2">
-          <div class="text-wrapper-6">Contact US</div>
-          <img class="line" src="img/line-5.svg" />
-          <img class="line-2" src="img/line-6.svg" />
-        </div>
-        <div class="text-wrapper-7" id="anchor"> Download From </div>
-        <div class="overlap-2">
-          <div class="text-wrapper-6">About Us</div>
-          <img class="line" src="img/line-5.svg" />
-          <img class="line-2" src="img/line-6.svg" />
-        </div>
-        <div class="flexcontainer">
-          <p class="text">
-            <span class="span">Pat Pat is a desktop rhythm music game<br /></span>
-          </p>
-          <p class="text">
-            <span class="text-wrapper-8">Place drums on your real desk<br /></span>
-          </p>
-          <p class="text">
-            <span class="text-wrapper-8"> Choose your favorite songs<br /></span>
-          </p>
-          <p class="text">
-            <span class="text-wrapper-8">Tap along to the falling beats<br /></span>
-          </p>
-          <p class="text"><span class="text-wrapper-8"> Immerse yourself in the charm of musical rhythm!</span></p>
-        </div>
-        <a href="https://d-fissure.com/"> <img class="image-3" src="img/dfissure.png" /></a>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="globals.css" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="macbook-air">
+    <div class="div">
+      <div class="head-content">
+        <img class="DALLE" src="img/head.jpg" />
+        <div class="rectangle"></div>
+        <img class="logo" src="img/logo.png" />
+        <div class="text-wrapper">PAT PAT</div>
+        <div class="text-wrapper-2"><a style="color: inherit;" href="#anchor">Download</a></div>
+        <!-- <div class="text-wrapper-2">Download</div> -->
       </div>
+      <div class="game-video">
+        <div class="text-wrapper-3">Discord</div>
+        <div class="text-wrapper-4">X</div>
+        <div class="text-wrapper-5">Youtube</div>
+
+        <div class="iframe-container">
+          <iframe src="https://www.youtube.com/embed/xq2_0xya5IY?si=oqtZWDLeJG4HulOL"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+      </div>
+      <div class="image-wrapper"><img class="img" src="img/sidequest.png" /></div>
+      <div class="img-wrapper"><img class="image-2" src="img/meta.png" /></div>
+      <a href="https://twitter.com/fissure55248"><img class="socials-2" src="img/logo_x.svg" /></a>
+      <a href="https://www.youtube.com/channel/UCcfBEh-6bOlSNbrwklcjd0A"><img class="socials-3"
+          src="img/logo_youtube.svg" /></a>
+      <a href="https://discord.com/channels/1218562530130133042/1219261479652687992"><img class="socials-4"
+          src="img/logo_discord.svg" /></a>
+      <div class="contact-us">
+        <div class="head-text-1">Contact US</div>
+        <img class="line" src="img/line-5.svg" />
+        <img class="line-2" src="img/line-6.svg" />
+      </div>
+      <div class="download-head-text" id="anchor"> Download From </div>
+      <div class="about-us">
+        <div class="head-text-1">About Us</div>
+        <img class="line" src="img/line-5.svg" />
+        <img class="line-2" src="img/line-6.svg" />
+      </div>
+      <div class="introduction">
+        <p class="text">
+          <span class="span">Pat Pat is a desktop rhythm music game<br /></span>
+        </p>
+        <p class="text">
+          <span class="intro-text">Place drums on your real desk<br /></span>
+        </p>
+        <p class="text">
+          <span class="intro-text"> Choose your favorite songs<br /></span>
+        </p>
+        <p class="text">
+          <span class="intro-text">Tap along to the falling beats<br /></span>
+        </p>
+        <p class="text"><span class="intro-text"> Immerse yourself in the charm of musical rhythm!</span></p>
+      </div>
+      <a href="https://d-fissure.com/"> <img class="logo-org" src="img/logo_dfissure.png" /></a>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
