Update download link

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
 
       </div>
-      <div class="image-wrapper"><img class="img" src="img/sidequest.png" /></div>
-      <div class="img-wrapper"><img class="image-2" src="img/meta.png" /></div>
+      <a href="https://sidequestvr.com/app/30382/patpat-mr-drums"> <div class="image-wrapper"><img class="img" src="img/sidequest.png" /></div> </a>
+      <a href="https://www.meta.com/experiences/6559828730715974 "> <div class="img-wrapper"><img class="image-2" src="img/meta.png" /></div> </a>
       <a href="https://twitter.com/fissure55248"><img class="socials-2" src="img/logo_x.svg" /></a>
       <a href="https://www.youtube.com/channel/UCcfBEh-6bOlSNbrwklcjd0A"><img class="socials-3"
           src="img/logo_youtube.svg" /></a>
