--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <title>Pat Pat</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="globals.css" />
   <link rel="stylesheet" href="style.css" />
@@ -19,9 +20,9 @@
         <!-- <div class="text-wrapper-2">Download</div> -->
       </div>
       <div class="game-video">
-        <div class="text-wrapper-3">Discord</div>
+        <!-- <div class="text-wrapper-3">Discord</div>
         <div class="text-wrapper-4">X</div>
-        <div class="text-wrapper-5">Youtube</div>
+        <div class="text-wrapper-5">Youtube</div> -->
 
         <div class="iframe-container">
           <iframe src="https://www.youtube.com/embed/xq2_0xya5IY?si=oqtZWDLeJG4HulOL"
